@@ -1,6 +1,12 @@
 ChangeLog for KNotes
 ====================
 
+2002/09/24  Michael Brade <brade@kde.org>
+
+    * fixed printing:
+        - do not use private Qt headers
+        - use the correct font 
+
 2002/09/21  Michael Brade <brade@kde.org>
 
     * inherit KTextEdit instead of QTextEdit
